force-app/main/default/objects/Sage_Intacct_Credentials__c/Sage_Intacct_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sage intacct credentials</description>
    <label>Sage Intacct Credentials</label>
</CustomObject>