force-app/main/default/objects/Sage_Intacct_Credentials__c/fields/Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Sender_ID__c</fullName>
    <label>Sender ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>