force-app/main/default/objects/Sage_Intacct_Credentials__c/fields/Sender_Password__c.field-meta.xml
<CustomField>
    <fullName>Sender_Password__c</fullName>
    <label>Sender Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>