force-app/main/default/objects/Sage_Intacct_Credentials__c/fields/Webservice_User_Password__c.field-meta.xml
<CustomField>
    <fullName>Webservice_User_Password__c</fullName>
    <label>Webservice User Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>